# LivePusher

./: README.md  import-summary.txt
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: pusher.cpp
app/src/main/java/com/jutong/live/: BaseApplication.java  LivePusher.java  MainActivity.java
app/src/main/java/com/jutong/live/jni/: PusherNative.java
app/src/main/java/com/jutong/live/param/: AudioParam.java
app/src/main/java/com/jutong/live/pusher/: AudioPusher.java  VideoPusher.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
